# mflib

./: .gitignore  CMakeLists.txt  Doxyfile  INSTALL.md  LICENSE  README.md
CMakeModules/: FindDAALConfig.cmake  FindIPPConfig.cmake  FindMKLConfig.cmake  FindTBBConfig.cmake
include/mflib/: enums.hpp  matchedFilter.hpp  matchedFilterOptions.hpp  matchedFilterParameters.hpp  mpi.hpp  networkStationPhase.hpp  singleChannelMatchedFilter.hpp  version.hpp.in  waveformTemplate.hpp
include/mflib/private/: private.hpp
include/mflib/singleChannel/: associator.hpp  associatorParameters.hpp  detection.hpp  detectionTimeInterpolationParameters.hpp  detector.hpp  detectorParameters.hpp  event.hpp  matchedFilter.hpp  matchedFilterParameters.hpp  relativeMagnitude.hpp
include/private/: dbscan.hpp  peakFinder.hpp  private.hpp  weightedStatistics.hpp
python/: matchedFilterOptions.cpp  matchedFilterOptions.hpp  matchedFilterParameters.cpp  matchedFilterParameters.hpp  modules.hpp  multiChannelMatchedFilter.cpp  multiChannelMatchedFilter.hpp  multiChannelMatchedFilterParameters.cpp  multiChannelMatchedFilterParameters.hpp  networkStationPhase.cpp  pymflib.cpp  singleChannelMatchedFilter.cpp  singleChannelMatchedFilter.hpp  unit_tests.py  waveformTemplate.cpp  waveformTemplate.hpp
python/include/: pyMultiChannelMatchedFilter.hpp  pyMultiChannelMatchedFilterParameters.hpp  pyNetworkStationPhase.hpp  pySingleChannelMatchedFilter.hpp  pySingleChannelMatchedFilterParameters.hpp  pySingleChannelRelativeMagnitude.hpp  pyWaveformTemplate.hpp
python/include/singleChannel/: pyAssociator.hpp  pyAssociatorParameters.hpp  pyDetection.hpp  pyDetector.hpp  pyDetectorParameters.hpp  pyMatchedFilter.hpp  pyRelativeMagnitude.hpp
python/singleChannel/: associator.cpp  associatorParameters.cpp  detection.cpp  detector.cpp  detectorParameters.cpp  matchedFilter.cpp  matchedFilterParameters.cpp  matchedFilterParameters.hpp  relativeMagnitude.cpp
src/: cudaMatchedFilter.cu  dbscan.cpp  magnitude.cpp  matchedFilter.cpp  matchedFilterOptions.cpp  matchedFilterParameters.cpp  mpi.cpp  networkStationPhase.cpp  peakFinder.cpp  version.cpp  waveformTemplate.cpp
src/singleChannel/: associator.cpp  associatorParameters.cpp  detection.cpp  detectionTimeInterpolationParameters.cpp  detector.cpp  detectorParameters.cpp  event.cpp  matchedFilter.cpp  matchedFilterParameters.cpp  relativeMagnitude.cpp
testing/: associator.cpp  dbscan.cpp  detection.cpp  detector.cpp  main.cpp  matchedFilter.cpp  matchedFilterOptions.cpp  matchedFilterParameters.cpp  networkStationPhase.cpp  peakFinder.cpp  relativeMagnitude.cpp  singleChannel.cpp  utilities.cpp  utilities.hpp  waveformTemplate.cpp
